# giovanni

./: .dockerignore  .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  BUILD.md  LICENSE  README.md  mise.toml  oxlint.config.ts  oxlintrc.shared.json  oxlintrc.shared.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  tsdown.config.ts  turbo.json  vite.demo.config.ts  vitest.config.ts  wrangler.jsonc
.agents/skills/building-native-ui/: SKILL.md
.agents/skills/building-native-ui/references/: animations.md  controls.md  form-sheet.md  gradients.md  icons.md  media.md  route-structure.md  search.md  storage.md  tabs.md  toolbar-and-headers.md  visual-effects.md  webgpu-three.md  zoom-transitions.md
.agents/skills/expo-cicd-workflows/: SKILL.md
.agents/skills/expo-cicd-workflows/scripts/: fetch.js  package.json  validate.js
.agents/skills/expo-dev-client/: SKILL.md
.agents/skills/expo-module/: SKILL.md
.agents/skills/expo-module/references/: config-plugin.md  lifecycle.md  module-config.md  native-module.md
.agents/skills/expo-ui-jetpack-compose/: SKILL.md
.agents/skills/expo-ui-swiftui/: SKILL.md
.agents/skills/tsdown/: SKILL.md
.agents/skills/tsdown/references/: advanced-ci.md  advanced-hooks.md  advanced-plugins.md  advanced-programmatic.md  advanced-rolldown-options.md  guide-getting-started.md  guide-migrate-from-tsup.md  option-cjs-default.md  option-cleaning.md  option-config-file.md  option-css.md  option-dependencies.md  option-dts.md  option-entry.md  option-exe.md  option-lint.md  option-log-level.md  option-minification.md  option-output-directory.md  option-output-format.md  option-package-exports.md  option-platform.md  option-root.md  option-shims.md  option-sourcemap.md  option-target.md  option-tree-shaking.md  option-unbundle.md  option-watch-mode.md  recipe-react.md  recipe-solid.md  recipe-svelte.md  recipe-vue.md  recipe-wasm.md
.agents/skills/upgrading-expo/: SKILL.md
.agents/skills/upgrading-expo/references/: expo-av-to-audio.md  expo-av-to-video.md  native-tabs.md  new-architecture.md  react-19.md  react-compiler.md
.claude/: settings.local.json
.github/scripts/: post-compression-comment.js  post-preview-comment.js
.github/workflows/: autofix.yml  ci-cd.yml  ci.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: cli.rs  commands.rs  headless.rs  lib.rs  main.rs  menu.rs  state.rs
apps/giovanni-web/: README.md  components.json  package.json  tsconfig.json  vite.config.ts
apps/giovanni-web/src/: routeTree.gen.ts
apps/giovanni-web/src/components/: AboutDialog.tsx  BeforeAfterView.tsx  ComparisonSlider.tsx  ToolLayout.tsx  tool-layout.tsx
apps/giovanni-web/src/lib/: seo.ts
apps/mobile/: README.md  app.json  metro.config.js  oxlint.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/mobile/scripts/: reset-project.js
apps/mobile/src/: global.css
apps/pdfly-desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/pdfly-desktop/src/: App.tsx  main.tsx
apps/pdfly-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/pdfly-web/: .oxlintrc.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/pdfly-web/src/: App.tsx  main.ts  main.tsx  pdf-tools.integration.test.ts  styles.css
apps/web/: .oxlintrc.json  README.md  components.json  oxlint.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: client.tsx  routeTree.gen.ts  router.tsx  ssr.tsx
apps/web/src/lib/: seo.ts  (+1 more)
demo/: index.html
scripts/: cloudflare-build.sh
src/: index.ts
src/core/: compress.ts  errors.ts  module-loader.ts  qpdf.ts  split.ts  writer.ts
src/types/: index.ts  options.ts  results.ts  wasm-module.ts
src/utils/: buffer.ts  format.ts  validation.ts
test/: errors.test.ts  format.test.ts  setup.ts  validation.test.ts
wasm/: CMakeLists.txt  build.ps1  build.sh  emscripten-toolchain.cmake
wasm/embind/: qpdf_bindings.cc  qpdf_wasm_api.cc  qpdf_wasm_api.hh
(+274 files in other folders)
